2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* w3m 0.2.5
	* version.c.in: update
	* doc/README: version 0.2.5, release date
	* doc-jp/README: ditto
	* NEWS: update

2002-01-31  Kiyokazu SUTO <suto@ks-and-ks.ne.jp>

	* inflate.c: support raw deflate without zlib header

2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02955] compression_decoders error message
	* file.c (uncompress_stream): redirect stderr 
	* inflate.c (main): print error message

2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02949] fix for #undef USE_MIGEMO
	* main.c (dispincsrch): need #ifdef USE_MIGEMO

2002-01-31  Fumitoshi UKAI <ukai@debian.or.jp>

	* [w3m-dev 02946] toggle migemo
	* fm.h (migemo_active): added
	* proto.h (inputLineHistSearch): add arg `prop' to incrfunc()
	* linein.c (inputLineHistSearch): ditto
	* main.c (isrch): ditto
	* main.c (dispincsrch): ditto
			C-\ toggle migemo
			underline when migemo is active
	* search.c (migemo_active): deleted
	* search.c (migemo_running): added
	* search.c (init_migemo): migemo_running
	* search.c (migemostr): ditto
	* search.c (forwardSearch): migemo_active > 0
	* search.c (backwardSearch): ditto

2002-01-31  Fumitoshi UKAI  <ukai@debian.or.jp>

	* [w3m-dev 02942] Digest qop=auth support
	* file.c (http_auth): add request to cred() arg
	* file.c (AuthBasicCred): ditto
	* file.c (AuthDigestCred): ditto
	* file.c (AuthDigestCred): support algorithm=MD5, MD5-sess
			qop=auth, auth-int
	* file.c (qstr_unquote): return NULL if input is NULL
	* file.c (none_auth_param): added
	* file.c (findAuthentication): skip weak or unknown auth
	* file.c (getAuthCookie): add request to arg
	* file.c (loadGeneralFile): add request to getAuthCookie()

2002-01-31  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02934] add auth cookie with unquoted realm
	* file.c (loadGeneralFile): need unquote realm

2002-01-31  Hironori Sakamoto <hsaka@mth.biglobe.ne.jp>

	* [w3m-dev 02933] segmentation fault when w3m -dump https: